# Megatron-Bridge

./: .flake8  .gitignore  .pylintrc  CHANGELOG.md  CONTRIBUTING.md  README.md  codecov.yml  pyproject.toml  ruff.toml  setup.py
.github/: CODEOWNERS  copy-pr-bot.yaml
.github/actions/test-template/: action.yml
.github/workflows/: _build_container.yml  _update_dependencies.yml  build-docs.yml  build-test-publish-wheel.yml  cicd-main.yml  code-formatting.yml  code-linting.yml  codecov-mock.yml  copyright-check.yml  dependabot.yml  install-test.yml  release.yaml
docker/: Dockerfile.ci  manifest.json
docker/common/: install.sh  install_conflicting_deps.sh  install_overrides.sh
docs/: bridge-guide.md  conf.py  documentation.md  index.md  performance-guide.md  project.json  versions1.json
examples/bridge/: 2_way_hf_binding.py  generate_from_hf.py  list_supported_bridges.py  multi_gpu_hf.py
examples/llm/llama3_8b/: pretrain_llama3_8b.py  pretrain_llama3_8b_nemo_run_partial.py  pretrain_llama3_8b_nemo_run_script.py
examples/llm/llama3_8b/conf/: llama3_8b_pretrain_override_example.yaml
examples/models/: 2_way_hf_binding.py  checkpoint_conversion.py  generate_from_hf.py  list_supported_bridges.py  multi_gpu_hf.py
examples/recipes/llama/: pretrain_llama3_8b.py  pretrain_llama3_8b_nemo_run_partial.py  pretrain_llama3_8b_nemo_run_script.py
examples/recipes/llama/conf/: llama3_8b_pretrain_override_example.yaml
examples/recipes/llama3_8b/: pretrain_llama3_8b.py  pretrain_llama3_8b_nemo_run_script.py
nemo_lm/: checkpointing.py  config.py  eval.py  fault_tolerance.py  init.py  optim.py  package_info.py  pretrain.py  setup.py  state.py  train.py
nemo_lm/converter/: common.py  llama.py  state_transform.py
nemo_lm/converters/: common.py  llama.py
nemo_lm/data/: loaders.py  samplers.py  utils.py
nemo_lm/data/builders/: finetuning_dataset.py  hf_dataset.py
nemo_lm/data/datasets/: packed_sequence.py  packing_utils.py  sft.py  utils.py
nemo_lm/model/: __init__.py  llama.py  llama4_utils.py  t5.py  utils.py
nemo_lm/models/: __init__.py  gpt.py  llama.py  llama4_utils.py  t5.py  utils.py
nemo_lm/peft/: walk_utils.py
nemo_lm/recipes/llm/: llama3_8b.py
nemo_lm/tokenizers/: bert_tokenization.py  gpt2_tokenization.py  multimodal_tokenizer.py  tokenizer.py
nemo_lm/training/: checkpointing.py  comm_overlap.py  config.py  eval.py  fault_tolerance.py  initialize.py  mixed_precision.py  optim.py  pretrain.py  setup.py  state.py  train.py
nemo_lm/utils/: async_utils.py  checkpoint_utils.py  common_utils.py  config_utils.py  flop_utils.py  import_utils.py  log_utils.py  sig_utils.py  theoretical_memory_utils.py  train_utils.py  wandb_utils.py
requirements/: requirements_test.txt
scripts/: import_hf_ckpt.py
scripts/performance/: argument_parser.py  executors.py
scripts/performance/llm/: pretrain_llama3_8b.py
src/megatron/bridge/: __init__.py  package_info.py
src/megatron/bridge/bridge/: README.md  __init__.py  auto_bridge.py  causal_bridge.py  mapping_registry.py  model_bridge.py  param_mapping.py  utils.py
src/megatron/bridge/common/: __init__.py  config.py  model_provider_mixin.py  state.py
src/megatron/bridge/core/: README.md
src/megatron/bridge/data/: loaders.py  samplers.py  utils.py
src/megatron/bridge/models/: README.md  __init__.py  auto_bridge.py  causal_bridge.py  config.py  gpt_provider.py  model_bridge.py  (+8 more)
src/megatron/hub/: package_info.py
tests/functional_tests/: L2_Functional_Tests_GPU.sh  L2_Generate_From_HF_PP.sh  L2_Generate_From_HF_TP.sh  L2_Launch_converter.sh  L2_Launch_evaluation.sh  L2_Launch_models.sh  L2_Launch_training.sh  L2_Multi_GPU_Conversion_PP.sh  L2_Multi_GPU_Conversion_TP.sh  L2_Pretrain_Test_GPU.sh  L2_Straggler_Detector_Test_GPU.sh  conftest.py  test_nvrx_straggler.py  test_pretrain.py  utils.py
tests/functional_tests/converter/: test_checkpoint_conversion.py  test_generate_from_hf.py  test_multi_gpu_conversion.py
tests/functional_tests/evaluation/: deploy_in_fw_script.py  test_evaluation.py
tests/functional_tests/models/: test_qwen2_conversion.py  test_qwen2_provider.py  test_qwen3_conversion.py  test_qwen3_moe_conversion.py  test_qwen3_moe_provider.py  test_qwen3_provider.py
tests/functional_tests/training/: test_finetune_dora.py  test_finetune_lora.py  test_load_model.py  test_nvrx_straggler.py  test_pretrain.py  test_pretrain_resume.py  test_sft.py
tests/unit_tests/: L0_Unit_Tests_CPU.sh  L0_Unit_Tests_GPU.sh  Launch_Unit_Tests.sh  conftest.py  download_unit_tests_dataset.py  test_checkpoint_utils.py  test_placeholder.py
tests/unit_tests/bridge/: test_auto_bridge.py  test_causal_bridge.py  test_mapping_registry.py  test_param_mapping.py  test_state_bridge.py  test_weight_bridge.py
tests/unit_tests/common/: test_config.py  test_model_provider_mixin.py  test_state.py
tests/unit_tests/data/: test_loaders.py  test_samplers.py  test_utils.py
tests/unit_tests/evaluation/: eval_unittest.py
tests/unit_tests/models/: test_auto_bridge.py  test_causal_bridge.py  test_config.py  test_gpt_full_te_layer_autocast_spec.py  test_gpt_provider.py  test_llama_provider.py  test_mapping_registry.py  test_model_instantiation.py  test_model_provider.py  test_model_provider_mixin.py  test_models_imports.py  test_param_mapping.py  test_state.py  test_t5_provider.py
tests/unit_tests/peft/: test_adapter_wrapper.py  test_canonical_lora.py  test_dora.py  test_dora_layers.py  test_lora.py  test_lora_layers.py  test_module_matcher.py  test_utils.py  test_walk_utils.py
tests/unit_tests/recipes/: test_run_plugins.py
tests/unit_tests/training/: test_checkpointing.py  test_comm_overlap.py  test_config.py  test_deepep.py  test_energy_monitor.py  test_fault_tolerance.py  test_finetune.py  test_gpt_step.py  test_mixed_precision.py  test_model_load_save.py  test_nvrx_straggler.py  test_peft_checkpointing.py  test_state.py
tests/unit_tests/utils/: test_checkpoint_utils.py  test_common_utils.py  test_config_utils.py  test_fusions.py  test_import_utils.py  test_instantiate_utils.py  test_omegaconf_utils.py  test_yaml_utils.py
(+355 files in other folders)
